fix toolbar icon vertical alignment

--- a/assets/src/components/editing/toolbar/Toolbar.modules.scss
+++ b/assets/src/components/editing/toolbar/Toolbar.modules.scss
@@ -67,6 +67,7 @@
   display: flex;
   flex-direction: row;
   font-weight: 400;
+  font-size: 0.875em;
   color: #6b7281;
   text-align: center;
   vertical-align: middle;
@@ -120,7 +121,7 @@
   overflow-y: auto;
   background: #f8f9fb;
   border: 2px solid #e5e6e8;
-  font-size: 0.875rem;
+  font-size: 0.875em;
 
   .toolbarButton {
     display: inline-flex;
